--- a/react-front-end/public/index.html
+++ b/react-front-end/public/index.html
@@ -22,7 +22,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <title>Trendi</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
