--- a/react-front-end/public/index.html
+++ b/react-front-end/public/index.html
@@ -25,7 +25,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body oncontextmenu="return false;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
