--- a/react-front-end/public/index.html
+++ b/react-front-end/public/index.html
@@ -34,6 +34,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Cineflix</title>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
