--- a/vite-express-project/index.html
+++ b/vite-express-project/index.html
@@ -7,7 +7,7 @@
     <link href="/dist/output.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Oswald:wght@400;600&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Oswald:wght@400;600&family=Roboto:wght@300;400;500&family=Kalam:wght@300&display=swap" rel="stylesheet">
     <title>Vite + React</title>
   </head>
   <body>
